Alistando el endpoint GET /api/v1/users/{param} para consumir desde el micro de solicitudes de prestamo